assets/css/custom.css
.admonitionblock *, .colist * {
    font-size: 1em;
}
.admonitionblock .content {
    border: none;
    border-left: 1px solid #cccccc;
    padding: 0 20px;
}
.admonitionblock .icon {
    border: none;
    display: table-cell;
    font-size: 2.5em;
    padding: 9px 20px;
    text-align: center;
    text-shadow: 1px 1px 2px rgba(0,0,0,.5);
    width: 85px;
}
.admonitionblock .icon-caution::before {
    color: #bf3400;
    content: "\f06d";
}
.admonitionblock .icon-important::before {
    color: #bf0000;
    content: "\f06a";
}
.admonitionblock .icon-note::before {
    color: #4695eb;
    content: "\f05a";
}
.admonitionblock .icon-tip::before {
    color: #f6cc40;
    content: "\f0eb";
    text-shadow: 1px 1px 2px #f9de85;
}
.admonitionblock .icon-warning::before {
    color: #f18400;
    content: "\f071";
}
.admonitionblock p:last-child {
    margin-bottom: 0
}
.colist td {
    border: none;
}
.conum[data-value] {
    background: #cccccc;
    border-radius: 100px;
    color: #000000;
    display: inline-block;
    font-family: "Open Sans","DejaVu Sans",sans-serif;
    font-size: .75em;
    font-style: normal;
    font-weight: bold;
    height: 1.67em;
    line-height: 1.67em;
    text-align: center;
    width: 1.67em;
}
.conum[data-value]::after {
    content:attr(data-value);
}
.conum[data-value] + b {
    display: none;
}
.highlight {
    padding: 20px;
}
.listingblock > .content {
    position: relative;
}
.paragraph:has(> p > span.image) > .title,
.listingblock > .title {
    font-style: italic;
}
.page__hero {
    margin-bottom: 0;
    text-align: center;
}
.page__hero > img {
    max-width: 1280px;
}
.sectionbody {
    font-size: 0.75em;
}
code {
    color: #5389D0;
    font-size: 1em !important;
}
details > summary {
    cursor: pointer;
}
details:not([open]) {
    margin: 0 0 1.3em;
}
details:not([open]) > summary:hover {
    background-color: #eee;
}
details[open] > summary {
    margin-bottom: 1em;
}

